tests/NormalTests/paczka1/fuzzy1/84060673.err
Error in line 7: F3XbwSq A213 103,*
Error in line 8: HeDKsnazGh A292 68,0
Error in line 2: c3nLy A292 30,2
Error in line 20: c3nLy S772 83,8
Error in line 18: KIYsSn A292 9,2
Error in line 25: HeDKsnazGh S772 71,8
